--- a/commands/权限等级.md
+++ b/commands/权限等级.md
@@ -6,6 +6,8 @@ keywords: "我的世界命令权限,权限等级划分,操作员命令"
 
 ---
 
+权限等级用于控制命令执行者可以执行什么命令。
+
 权限等级的定义参考了[MinecraftWiki](https://minecraft.fandom.com/zh/wiki/%E5%91%BD%E4%BB%A4#%E6%9D%83%E9%99%90%E7%AD%89%E7%BA%A7 "MinecraftWiki")，以下内容摘自其中
 
 `在基岩版中，权限等级可为0，1，2，3或4。`
