修订资源链接

--- a/commands/坐标.md
+++ b/commands/坐标.md
@@ -15,7 +15,7 @@ keywords: "我的世界坐标,相对坐标"
 
 绝对坐标就是指当前所处纬度的坐标。如下图所示，则绝对坐标为`-49 83 58`
 
-![绝对坐标示意图](https://unsc.oss-accelerate.aliyuncs.com/ViewCB/Images/坐标-1.png "绝对坐标示意图")
+![绝对坐标示意图](https://public.viewcb.net/images/坐标-1.png "绝对坐标示意图")
 
 ## 相对坐标
 
