--- a/commands/目标选择器.md
+++ b/commands/目标选择器.md
@@ -48,14 +48,14 @@ keywords: "目标选择器,命令参数,选择目标"
   - 例如：`@a[x=64,y=70,z=128,dx=30,dy=10,dz=30]`
   - 例如：`@a[dy=3]`
 
-![目标选择器示意图-1](https://unsc.oss-accelerate.aliyuncs.com/ViewCB/Images/目标选择器-1.svg "目标选择器示意图-1")
+![目标选择器示意图-1](https://public.viewcb.net/images/目标选择器-1.svg "目标选择器示意图-1")
 
 - `r,rm`  选定一个半径为多少的范围。
   - 例如：`@a[r=10]`  选择半径为10以内的所有玩家。
   - 例如：`@a[rm=40]`  选择半径为40以外的玩家。
   - 二者可以组合在一起：`@a[r=100,rm=20]`  选择半径为100以内、半径为20以外的玩家。
 
-![目标选择器示意图-2](https://unsc.oss-accelerate.aliyuncs.com/ViewCB/Images/目标选择器-2.svg "目标选择器示意图-2")
+![目标选择器示意图-2](https://public.viewcb.net/images/目标选择器-2.svg "目标选择器示意图-2")
 
 - `scores`  选定计分板为指定分数的玩家。
   - 标准规范：`@a[scores={计分板名称a=值1,计分板名称b=值2}]`
